<resources>
    <string name="WrongEmail">Incorrect Email</string>
    <string name="WrongPassword">Wrong Password: password needs to have at least one big letter, one number, one special sign</string>
    <string name="WrongPostalCode">Wrong Postal Code: correct format is xx-xxx </string>
    <string name="WrongCVV">Wrong CVV: correct format is xxx </string>
    <string name="WrongDebitCard">"Incorrect debit card "</string>

    <string name="app_name">Szama(n)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="basket">Basket</string>

    <string name="deleteAccountM">Are you suer you want to delete your account?</string>

    <string name="ForgottenPassword">Click here if you forgotten your password</string>
    <string name="email">EMAIL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sendResetingEmail">Send Email To Reset Password</string>
    <string name="wrongEmailOrLogin">"Wrong email or login" </string>
    <string name="RestartStyle">To change Theme you need to restart application</string>
    <string name="housenumber_text">House number</string>
    <string name="Street_text">Street</string>
    <string name="City_text">City</string>
    <string name="postCode_text">Post Code</string>
    <string name="adress_text">Address</string>
    <string name="name_text">Name</string>
    <string name="Surname_text">Surname</string>
    <string name="debit_card_text">Debit Card</string>
    <string name="debit_card_number_text">Debit Card Number</string>
    <string name="expiresEnd">Expires end</string>
    <string name="cvv_text">CVV</string>

    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="Register">Register</string>
    <string name="Quantity">Quantity</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_restaurant">Restaurants</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_register">Register</string>
    <string name="menu_welcome_screen">Welcome Screen</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_dish">Dish</string>
    <string name="menu_meal_list">Meal List</string>
    <string name="menu_item">Items</string>
    <string name="menu_PersonalData">Personal Data</string>
    <string name="goToBasket">Go to basket</string>

    <string name="priceTotal">Price Total</string>
    <string name="withDelivery">With Delivery</string>
    <string name="withoutDelivery">Without Delivery</string>
    <string name="order">Order</string>

    <string name="addTo">Add to basket</string>
    <string name="MealHint">Meals</string>
    <string name="personalDataEditing">Personal Data</string>
    <string name="aplicationColors">Change Theme</string>
    <string name="logOut">Log Out</string>
    <string name="deleteAccount">Delete Account</string>

    <string name="repeatPassword">Repeat password</string>
    <string name="save">Save</string>
    <string name="thankyou">Thank You For Purchase</string>
    <string name="printReceipt">Print Receipt</string>
    <string name="goBck">Go back to shopping</string>
    <string name="default_value">0000</string>
    <string name="style_value">0001</string>
    <string name="delivery">Delivery</string>
    <string name="WrongExpireCard">Wrong Expire number correct format : xx/xx</string>
    <string name="PasswordDontMatch">Passwords are not identical</string>
    <string name="WrongLogin">This Login already exist</string>
    <string name="EmptyWindow">All fields must be filled</string>
    <string name="WrongAdress">Wrong Adres : correct format is town-street, number,postcode</string>

    <string name="add_note">Add note</string>
    default_value
</resources>