<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_restaurant" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_summary"
            android:title="@string/menu_summary" />
        <item
            android:id="@+id/meal_list"
            android:title="@string/menu_summary" />
    </group>
</menu>