<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text" />

            <EditText
                android:id="@+id/registerNameWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/registerSurnameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Surname_text" />

            <EditText
                android:id="@+id/registerSurnameWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/registerLoginLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_text" />

            <EditText
                android:id="@+id/registerLoginWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/registerPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_text" />

            <EditText
                android:id="@+id/registerPasswordWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/registerPasswordAgainLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeatPassword" />

            <EditText
                android:id="@+id/registerPasswordAgainWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/registerCardNumberLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debit_card_number_text" />

            <EditText
                android:id="@+id/registerDebitCardNumberWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/registerCardEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expiresEnd" />

            <EditText
                android:id="@+id/registerDebitCardExpiresWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/registerCardCVVLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cvv_text" />

            <EditText
                android:id="@+id/registerDebitCardCVVWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/registerAdressLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adress_text" />

            <EditText
                android:id="@+id/registerAdressWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/registerCityLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/City_text" />

            <EditText
                android:id="@+id/registerCityWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/registerHauseNumberLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/housenumber_text" />

            <EditText
                android:id="@+id/registerHauseNumberWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/registerSteetLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Street_text" />

            <EditText
                android:id="@+id/registerStreetWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/registerPostCodeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postCode_text" />

            <EditText
                android:id="@+id/registerPostCodeWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>