<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".ui.settings.settings">

    <TextView
        android:id="@+id/settignsMainLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_settings"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settingsDataEditing"
        android:text="@string/personalDataEditing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settignsMainLabel"
        style="@style/SettingsButton" />

    <TextView
        android:id="@+id/settingsDayNightLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/aplicationColors"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsDataEditing" />

    <ToggleButton
        android:id="@+id/settingsDayNightButton"
        android:text="@string/aplicationColors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsDayNightLabel"
        style="@style/ThemeToggleButton" />

    <Button
        android:id="@+id/settingsLogOutButton"
        android:layout_marginTop="100dp"
        android:text="@string/logOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsDayNightButton"
        style="@style/SettingsButton"/>

    <Button
        android:id="@+id/settingsDeleteAcount"
        android:layout_marginTop="20dp"
        android:text="@string/deleteAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLogOutButton"
        style="@style/SettingsButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>