<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.personalDataSettings.PersonalDataSetting" >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/personalNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text" />

            <EditText
                android:id="@+id/personalNameWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personalSurnameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Surname_text" />

            <EditText
                android:id="@+id/personalSurnameWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personalLoginLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_text" />

            <EditText
                android:id="@+id/personalLoginWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personalPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_text" />

            <EditText
                android:id="@+id/personalPasswordWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personalCardNumberLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debit_card_number_text" />

            <EditText
                android:id="@+id/personalDebitCardNumberWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personalCardEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expiresEnd" />

            <EditText
                android:id="@+id/personalDebitCardExpiresWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personalCardCVVLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cvv_text" />

            <EditText
                android:id="@+id/personalDebitCardCVVWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personalAdressLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adress_text" />

            <EditText
                android:id="@+id/personalAdressWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personalCityLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/City_text" />

            <EditText
                android:id="@+id/personalCityWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personalHauseNumberLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/housenumber_text" />

            <EditText
                android:id="@+id/personalHauseNumberWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personalSteetLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Street_text" />

            <EditText
                android:id="@+id/personalStreetWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/personalPostCodeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postCode_text" />

            <EditText
                android:id="@+id/personalPostCodeWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/personalDataSavingbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
</androidx.constraintlayout.widget.ConstraintLayout>