<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.items.items">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="545dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:stretchColumns="0,1"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/itemsWithoutDeliveryButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/withoutDelivery" />

            <TextView
                android:id="@+id/itemsTotalPriceLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/priceTotal" />

        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/itemsWithDeliveryButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/withDelivery" />

            <Button
                android:id="@+id/itemOrderButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/order" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>